Revised top navigation bar

--- a/src/apps/copo_core/templates/copo/copo_docs.html
+++ b/src/apps/copo_core/templates/copo/copo_docs.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static 'copo/fuelux/css/fuelux.css' %}">
     <link rel="stylesheet" href="{% static 'copo/rangeslider/rangeslider.css' %}">
     <link rel="stylesheet" href="{% static 'copo/css/copo/style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'copo/css/copo/menu.css' %}">
     <link rel="stylesheet" href="{% static 'copo/autocomplete.js-2.1.0/autocomplete.css' %}">
     <link rel="stylesheet" href="{% static 'copo/webui_popover/jquery.webui-popover.css' %}">
