--- a/src/apps/copo_core/templates/copo/base2.html
+++ b/src/apps/copo_core/templates/copo/base2.html
@@ -13,6 +13,7 @@
     <!-- FONTAWESOME STYLE CSS -->
     <link href="/static/copo/css/fontawesome/fontawesome-6.5.1.min.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
+    <link href="/static/assets/css/navbar.css" rel="stylesheet" >
     <link href="/static/assets/css/style.css" rel="stylesheet" />
 
     <!-- BANNER STYLE CSS -->
@@ -42,9 +43,13 @@
 </head>
 
 <body>
-    <!-- include navbar html -->
+    <!-- Top navigation bar -->
     <div class="pull-right">
-        {% include "nav_dropdown.html" %}
+        {% if user.is_authenticated %}
+            {% include 'nav_authenticated.html' %}
+        {% else %}
+            {% include 'nav_public.html' %}
+        {% endif %}
     </div>
     <!-- Carousel -->
     {% block carouselblock %}
