--- a/src/apps/copo_core/templates/copo/base_simple.html
+++ b/src/apps/copo_core/templates/copo/base_simple.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'copo/css/bootstrap/bootstrap.css' %}">
-    <!--<link rel="stylesheet" href="{% static 'copo/css/bootstrap/bootstrap-theme.css' %}">-->
+    <link rel="stylesheet" href="{% static 'assets/css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'copo/css/copo/style.css' %}">
     <link rel="stylesheet" href="{% static 'copo/css/copo/menu.css' %}">
 
