--- a/src/apps/copo_landing_page/templates/dtol.html
+++ b/src/apps/copo_landing_page/templates/dtol.html
@@ -26,6 +26,7 @@
     <link href="/static/copo/css/fontawesome/fontawesome-6.5.1.min.css" rel="stylesheet"/>
     <!-- CUSTOM STYLE CSS -->
     <link href="/static/assets/css/style.css" rel="stylesheet"/>
+    <link href="/static/assets/css/navbar.css" rel="stylesheet"/>
     <!-- GOOGLE FONT -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
@@ -55,9 +56,13 @@
 <body>
 
 
-<!-- Navigation -->
+<!-- Top navigation bar -->
 <div class="pull-right">
-    {% include "nav_dropdown.html" %}
+    {% if user.is_authenticated %}
+        {% include 'nav_authenticated.html' %}
+    {% else %}
+        {% include 'nav_public.html' %}
+    {% endif %}
 </div>
 {#<nav class="navbar-inverse" role="navigation">#}
 {##}
