--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -1,372 +1,226 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-attachment: fixed !important;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    font-family: "Roboto", sans-serif !important;
-    font-weight: bold;
+  background-attachment: fixed !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: bold;
 }
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 .container-fluid {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-    min-height: 100%;
-    position: relative;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  min-height: 100%;
+  position: relative;
 }
 
 /* footer styles */
 #footer {
-    background-color: white;
-    height: 100px;
-    width: 100%;
-    padding: 20px 50px 0 0;
-    margin-top: 1.5px;
-    position: absolute;
-    bottom: 0;
+  background-color: white;
+  height: 100px;
+  width: 100%;
+  padding: 20px 50px 0 0;
+  margin-top: 1.5px;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer-frontpage {
-    margin-top: 100px !important;
-    bottom: initial !important
-}
-
-/*=======================================
-    NAVIGATION STYLES
-=========================================*/
-
-/* .container-fluid nav{
-    background-color: white;
-} */
-.nav {
-    padding-right: 45px;
-}
-
-.navbar-nav>li>a {
-    padding-top: 5px !important;
-    padding-bottom: 5px !important;
-    line-height: 20px !important;
-}
-
-.nav>li>a {
-    padding: 0;
-}
-
-.navbar-default {
-    border-bottom-color: rgba(38, 38, 38, 0.95)!important;
-    border-bottom-width: thin!important;
-}
-
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus {
-    background-color: #080808 !important;
-    color: #FFFFFF !important;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-    background-color: #080808 !important; 
-    color: #FFFFFF !important;
-}
-
-.navbar-default .nav li a {
-    background-color: transparent !important;
-    color: black !important;
-    font-size: 2em;
-    font-weight: bold;
-    margin: 15px 15px 0 5px; /*10px 5px 0 5px;*/
-}
-
-.navbar-inverse .nav li a {
-    background-color: transparent !important;
-    color: white !important;
-    font-size: 2em;
-    font-weight: bold;
-    margin: 15px 15px 0 5px; /*10px 5px 0 5px;*/
-}
-
-.navbar-inverse .navbar-nav > .active > a, 
-.navbar-inverse .navbar-nav > .active > a:hover, 
-.navbar-inverse .navbar-nav > .active > a:focus {
-    background-color: #FFFFFF !important;
-    color: #080808 !important;
-}
-
-.navbar-inverse .navbar-nav > li > a:hover {
-    background-color: #eaf0f0 !important;
-    color: #080808 !important;
-}
-
-.dropdown-menu {
-    padding: 5px 0 !important;
-    min-width: 160px !important;
-    font-size: 14px;
-    text-align: right;
-    list-style: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-    display: none;
-    float: left;
-    margin: 2px 0 0;
-    /* background-color: #101010 !important; */
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    border: 1px solid rgba(0, 0, 0, .15);
-    border-radius: 4px;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-}
-
-.navbar-default .dropdown-menu {
-    background-color: white !important;
-}
-
-.navbar-default .dropdown-menu>li>a:focus,
-.navbar-default .dropdown-menu>li>a:hover {
-    background-color: black !important;
-    text-decoration: none;
-    color: white !important;
-}
-
-.navbar-default .dropdown-menu>li>a {
-    font-weight: bold;
-    color: black !important;
-    font-size: 14px !important;
-    text-align: left;
-}
-
-.navbar-inverse .dropdown-menu{
-    background-color: #101010 !important;
-}
-
-.navbar-inverse .dropdown-menu > li > a:focus, 
-.navbar-inverse.dropdown-menu > li > a:hover {
-    background-color: #d9d9d9 !important;
-    text-decoration: none;
-    color: #0a0a0a !important;
-}
-
-.navbar-inverse .dropdown-menu > li > a {
-    font-weight: bold;
-    color: white !important;
-    font-size: 14px !important;
-    text-align: left;
+  margin-top: 100px !important;
+  bottom: initial !important;
 }
 
 #copo-icon {
-    width: 1000px;
-    margin: 0 auto;
+  width: 1000px;
+  margin: 0 auto;
 }
 
 #copo-icon img {
-    width: 100%
+  width: 100%;
 }
 
 .green-subtitle {
-    text-align: center;
-    font-size: 2.8em;
-    font-weight: bold;
-    padding: 10px;
-    width: 900px;
-    margin-top: 20px !important;
-    margin: 0 auto;
-    background-color: #93d242;
-    color: #414141
+  text-align: center;
+  font-size: 2.8em;
+  font-weight: bold;
+  padding: 10px;
+  width: 900px;
+  margin-top: 20px !important;
+  margin: 0 auto;
+  background-color: #93d242;
+  color: #414141;
 }
-
 
 .left-panel {
-    padding-right: 0 !important;
-    margin-right: 0 !important;
-    min-height: 100vh !important;
-}
-
-.green-theme {
-    background-color: #93d242;
-    color: rgba(65, 65, 65, 1) !important;
-}
-
-.grey-theme {
-    background-color: rgba(65, 65, 65, 1);
-    color: #eaf0f0;
-}
-
-.red-theme {
-    background-color: #c74b2c;
-    color: #eaf0f0;
-}
-
-.blue-theme {
-    background-color: #5174c7;
-    color: #eaf0f0;
-}
-
-.topbanner-light {
-    background-color: #eaf0f0 !important;
-    color: #414141 !important;
-    font-size: 4em;
-    font-weight: bold;
-    padding: 80px 7px 7px 50px;
-}
-
-.topbanner-dark {
-    background-color: rgba(65, 65, 65, 1) !important;
-    color: #eaf0f0 !important;
-    font-size: 4em;
-    font-weight: bold;
-    padding: 20px 7px 7px 50px;
+  padding-right: 0 !important;
+  margin-right: 0 !important;
+  min-height: 100vh !important;
 }
 
 .zero-padding {
-    padding-left: 0;
-    height: 100%;
+  padding-left: 0;
+  height: 100%;
 }
 
 .full-length {
-    height: 100%;
+  height: 100%;
 }
 
-
 .secondary-top-right {
-
-    position: relative;
-    padding-left: 0 !important;
-    height: 107px;
+  position: relative;
+  padding-left: 0 !important;
+  height: 107px;
 }
 
 .secondary-top-right img {
-    max-height: 90%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+  max-height: 90%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .button_bar {
-    padding-left: 15px;
-    margin-top: 5px !important;
-    font-size: 1.5em;
-    text-align: center;
+  padding-left: 15px;
+  margin-top: 5px !important;
+  font-size: 1.5em;
+  text-align: center;
 }
 
 .big_button {
-    margin-top: 75px !important;
-    font-size: 2em !important;
-    background-color: rgba(65, 65, 65, 0.5) !important;
-    width: 500px
+  margin-top: 75px !important;
+  font-size: 2em !important;
+  background-color: rgba(65, 65, 65, 0.5) !important;
+  width: 500px;
 }
 
 .big_button:hover {
-    color: #93d242 !important;
+  color: #93d242 !important;
 }
-
-/*section {
-    height: 100vh
-}
-*/
 
 .secondary-container {
-    padding: 50px 25px 0 50px;
+  padding: 50px 25px 0 50px;
 }
 
 .secondary-title-image img {
-    padding: 0;
-    height: 60px;
-    margin-left: 100px;
-    vertical-align: bottom;
+  padding: 0;
+  height: 60px;
+  margin-left: 100px;
+  vertical-align: bottom;
 }
 
 p {
-    font-size: 2em;
-    margin: 60px 0 15px 0;
-    padding: 0 40px 0 40px;
+  font-size: 2em;
+  margin: 60px 0 15px 0;
+  padding: 0 40px 0 40px;
 }
 
 .margin-30 {
-    margin: 30px
+  margin: 30px;
 }
 
 .item {
-    font-size: 1.4em !important;
+  font-size: 1.4em !important;
 }
 
 .item a {
-    color: rgba(65, 65, 65, 1);
-    text-decoration: none;
+  color: rgba(65, 65, 65, 1);
+  text-decoration: none;
 }
 
 #stats_bar {
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 100px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 
 .shade {
-    background-color: rgba(65, 65, 65, 0.5);
+  background-color: rgba(65, 65, 65, 0.5);
 }
 
 .statistic {
-    color: rgba(65, 65, 65, 1);
-    padding: 20px !important
+  color: rgba(65, 65, 65, 1);
+  padding: 20px !important;
 }
 
 /* Contact section CSS */
 #contact-sec {
-    padding-top: 5px !important;
-    color: white;
-    margin-top: -40px;
+  padding-top: 5px !important;
+  color: white;
+  margin-top: -40px;
 }
 
 #contact-title {
-    width: fit-content;
-    padding: 10px;
-    font-weight: bold;
-    box-shadow: 0 0 0 1px #fff inset !important;
+  width: fit-content;
+  padding: 10px;
+  font-weight: bold;
+  box-shadow: 0 0 0 1px #fff inset !important;
 }
 
 #email_form #name,
 #email_form #email {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
 #email_form #message {
-    height: 200px;
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+  height: 200px;
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
+/* Text colours */
 .white-text {
-    color: white !important;
+  color: white !important;
 }
 
 .black-text {
-    color: black!important;
+  color: black !important;
+}
+
+/* Themes */
+.green-theme {
+  background-color: #93d242;
+  color: rgba(65, 65, 65, 1) !important;
+}
+
+.grey-theme {
+  background-color: rgba(65, 65, 65, 1);
+  color: #eaf0f0;
+}
+
+.red-theme {
+  background-color: #c74b2c;
+  color: #eaf0f0;
+}
+
+.blue-theme {
+  background-color: #5174c7;
+  color: #eaf0f0;
 }
