--- a/src/apps/copo_landing_page/templates/manifests.html
+++ b/src/apps/copo_landing_page/templates/manifests.html
@@ -100,7 +100,7 @@
                                     <div id="commonFieldsDropdownListDiv" class="form-group">
                                         <span style="display:none;" id="commonFieldErrorMessageID"
                                               class="help-block"></span>
-                                        <select class="form-control" id="commonfields"
+                                        <select class="form-control" id="commonFields"
                                                 onchange="insertFormDiv(this)"
                                                 aria-describedby="commonFieldErrorMessageID">
                                         </select>
