feat(ui): convert image component into dropdown menu

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -98,6 +98,9 @@
     <!-- Banner css -->
     <link href="/static/assets/css/base_banner.css" rel="stylesheet" />
 
+    <!-- General colours -->
+    <link href="{% static 'copo/css/copo/colours.css' %}" rel="stylesheet" >
+
     <script>
     {% include 'copo/copo_profile_types.html' %}
     </script>
