--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -648,13 +648,13 @@
 
 
     <!-- profile components button template -->
-    <a class="tiny ui labeled button pcomponent-button" tabindex="0" style="margin: 3px;">
-        <div class="tiny ui button pcomponent-color">
-            <i class="pcomponent-icon "></i>
-            <span class="pcomponent-name" style="padding-left: 3px;"></span>
+    <a class="tiny ui labeled button profile-component-button" tabindex="0" style="margin: 3px;">
+        <div class="tiny ui button profile-component-colour">
+            <i class="profile-component-icon "></i>
+            <span class="profile-component-name" style="padding-left: 3px;"></span>
         </div>
-        <div class="tiny ui basic pcomponent-color left pointing label">
-            <span class="pcomponent-count"><i class='fa fa-spinner fa-pulse' style="font-size: 10px;"></i></span>
+        <div class="tiny ui basic profile-component-colour left pointing label">
+            <span class="profile-component-count"><i class='fa fa-spinner fa-pulse' style="font-size: 10px;"></i></span>
         </div>
     </a>
 
