--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -7,6 +7,7 @@
 {% block meta_description %}Manage and explore work profiles (aka studies or projects) seamlessly. Create, edit or delete profiles and navigate to related components like samples, reads, and files. Infinite scroll lets you view more profiles effortlessly.{% endblock %}
 
 {% block stylesheet_block %}
+    <link rel="stylesheet" href="{% static 'copo/css/copo/colours.css' %}">
     <link rel="stylesheet" href="{% static 'copo_profile/css/copo_profile_index.css' %}">
 {% endblock %}
 
@@ -40,7 +41,7 @@
         <input
         type="hidden"
         id="component_subtitle"
-        value="<select id='profile_type' name='profile_type'>{% for profile_type in profile_types %}<option value='{{ profile_type.value }}' title='{{profile_type.label}}' >{{ profile_type.label }}</option>{% endfor %}</select> "
+        value="<select id='profileType' name='profileType'>{% for profile_type in profile_types %}<option value='{{ profile_type.value }}' title='{{profile_type.label}}' >{{ profile_type.label }}</option>{% endfor %}</select> "
       />   
         <input type="hidden" id="copo_email" value="{{copo_email}}"/>
         <input type="hidden" id="groups" value="{{groups}}"/>
@@ -156,7 +157,7 @@
                 </select>
             </div>
             <div class="col-xs-0 col-md-0 col-lg-0">
-                <div class="pull-left"><i id="sortIconID" class="sort-down fa fa-sort-down sort-icon"></i></div>
+                <div class="pull-left"><i id="sortIconId" class="sort-down fa fa-sort-down sort-icon"></i></div>
 
             </div>
         </div>
@@ -168,7 +169,7 @@
             {% include 'copo/profile/copo_profile_record.html' %}
         {% endfor %}
     </div>
-    <div id="bottom-panel">
+    <div id="bottomPanel">
         Showing:
         &nbsp;<b><span id="grid-count"></span>
         &nbsp;</b>/
