--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
@@ -2,18 +2,18 @@
 {% load static %}
 {% load web_tags %}
 <div class="grid">
-    <div class="copo-records-panel" profile_type="{{ profile.type }}" shared_profile_type="{{ profile.shared_type }}"  study_status="{{ profile.study_status | get_first_value_from_array }}" study_release_date="{{ profile.study_release_date | get_first_value_from_array }}">
+    <div class="copo-records-panel" profile-type="{{ profile.type }}" shared-profile-type="{{ profile.shared_type }}"  study_status="{{ profile.study_status | get_first_value_from_array }}" study_release_date="{{ profile.study_release_date | get_first_value_from_array }}">
         <!--Panel -->
         <div class="panel">
             <!--Panel heading -->
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-sm-10 col-md-10 col-lg-10 row-title">
-                        <span id="{{ profile.id }}" class=showEllipsisFor1TextLine>{{ profile.title }}&nbsp;</span>
+                        <span id="{{ profile.id }}" class=ellipsis-1-line>{{ profile.title }}&nbsp;</span>
                     </div>
                     <div class="col-sm-2 col-md-2 col-lg-2 row-ellipsis" title="View profile options">
-                        <div id="{{ profile.id }}" class="pull-right ellipsisDiv">
-                            <i id="ellipsisID" class="fa fa-ellipsis-v" data-toggle="popover"
+                        <div id="{{ profile.id }}" class="pull-right ellipsis-div">
+                            <i id="ellipsisId" class="fa fa-ellipsis-v" data-toggle="popover"
                                data-html="true" role="button"
                                title='<i id="profileOptionsPopoverCloseBtn" class="fa fa-times pull-right"></i>'></i>
                         </div>
@@ -28,12 +28,12 @@
                         <!--Panel content -->
                         <!-- Row: Profile information-->
                         <div class="profile-info-row">
-                            <div class="date_createdDiv" style="display:inline; margin-bottom: 10px;" date_created="{{ profile.date_created }}"><span class="boldText">Created: </span> {{ profile.date_created }}</div>
-                            <div class="boldText" style="margin-top: 10px;">Description:</div>
-                            <div class="showEllipsisFor2TextLines profileDescription">{{ profile.description }}</div>
+                            <div class="date-created-div" style="display:inline; margin-bottom: 10px;" date-created="{{ profile.date_created }}"><span class="bold-text">Created: </span> {{ profile.date_created }}</div>
+                            <div class="bold-text" style="margin-top: 10px;">Description:</div>
+                            <div class="ellipsis-2-lines profileDescription">{{ profile.description }}</div>
                             
                             {% if profile.owner_name or profile.shared_owner_name or profile.associated_type or profile.sequencing_centre|is_list_empty or profile.study_status%}
-                                <a id="showMoreProfileInfoBtn" class="btn {% if profile.description.strip|length < 56 %}showMoreProfileInfoBtn_margin{% elif profile.description.strip|length >= 56 %}showMoreProfileInfoBtn_2LineDescriptionText{% endif %}" href="#" rel="popover"
+                                <a id="showMoreProfileInfoBtn" class="btn {% if profile.description.strip|length < 56 %}show-more-btn-spacing{% elif profile.description.strip|length >= 56 %}show-more-btn-with-2-line-desc{% endif %}" href="#" rel="popover"
                                     data-popover-content="#showMoreProfileInfoContent" data-placement="right">View more...</a>                         
                             {% endif %}
 
@@ -43,18 +43,18 @@
                                 <div class="popover-content showMoreProfileInfoPopover-content-div">
                                     {% if profile.owner_name %}
                                         <div class="ownerDiv" style="margin-top: 10px;">
-                                            <span class="boldText">Owner: </span> 
+                                            <span class="bold-text">Owner: </span> 
                                             <span id="ownerID">{{ profile.owner_name }}</span>
                                         </div>
                                     {% endif %}
                                     {% if profile.shared_owner_name %}
                                         <div class="sharedOwnerDiv" style="margin-top: 10px;">
-                                            <span class="boldText">Collaborator(s): </span> 
+                                            <span class="bold-text">Collaborator(s): </span> 
                                             {% with profile.shared_owner_name as shared_owners %}
                                                 <span id="sharedOwnerID">
                                                     {% if shared_owners|length > 3 %}
                                                     {{ shared_owners|slice:":3"|join:", " }}&hellip;
-                                                        <i class="fa fa-info-circle shared_owner_info_icon" title="{{ shared_owners|format_list_with_and }}"></i>
+                                                        <i class="fa fa-info-circle shared-owner-info-icon" title="{{ shared_owners|format_list_with_and }}"></i>
                                                     {% else %}
                                                         {{ shared_owners|format_list_with_and }}
                                                     {% endif %}
@@ -67,8 +67,8 @@
                                             Associated
                                             Profile Type(s):
                                         </div>
-                                        <div class="associated_type_div_value ">
-                                            <ul class="associated_type_ulTag">
+                                        <div class="associated-type-div-value ">
+                                            <ul class="associated-type-ul-tag">
                                                 {% for element in profile.associated_type %}
                                                     <li> {{ element }}
                                                         <i class="fa fa-info-circle associated_type_info_icon" title="{{ element | get_associated_type_label }}"></i>
@@ -85,7 +85,7 @@
                                             <ul class="sequencing_centre_ulTag">
                                                 {% for element in profile.sequencing_centre%}
                                                     <li> {{ element }} 
-                                                        <i class="fa fa-info-circle sequencing_centre_info_icon" title="{{ element | get_sequencing_centre_label }}"></i>
+                                                        <i class="fa fa-info-circle sequencing-centre-info-icon" title="{{ element | get_sequencing_centre_label }}"></i>
                                                     </li>
                                                 {% endfor %}
                                             </ul>
@@ -93,10 +93,10 @@
                                     {% endif %}
                                     {% if profile.study_status %}
                                         <div class="studyStatusDiv">
-                                            <span class="boldText">Release Status: </span> 
+                                            <span class="bold-text">Release Status: </span> 
                                             <span id="study_status_{{profile.id}}">{{ profile.study_status | get_first_value_from_array}}</span>
                                         </div>
-                                        <div><span class="boldText">Release Date: </span>    
+                                        <div><span class="bold-text">Release Date: </span>    
                                             <span id="study_release_date_{{profile.id}}">{{ profile.study_release_date | get_first_value_from_array}}</span>
                                         </div>
                                     {% endif %}
@@ -107,7 +107,7 @@
                         <!--Panel expanding menu -->
                         <!-- Row: Profile menu-->
                         <div class="{% if profile.owner_name or profile.shared_owner_name or profile.associated_type or profile.sequencing_centre|is_list_empty or profile.study_status %}menu-row{% else %}menu-no-addtl-info-row{% endif %}">
-                            <span class="ui compact menu expanding_menu" id="expanding_menu">
+                            <span id="expandingMenu" class="ui compact menu expanding-menu-panel">
                                 <div class="ui up pointing dropdown link item" tabindex="0">
                                     Components
                                     <i class="dropdown icon"></i>
