--- a/static/copo/css/copo/style.css
+++ b/static/copo/css/copo/style.css
@@ -218,33 +218,45 @@ copo-noborders-table.dataTable thead td {
 
 /* end page title */
 
-/*h1 {*/
+/* page icons */
+.profile-dropdown-wrapper .profile-dropdown-menu {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /*auto auto */
+  gap: 0.5em;
 
-/*font-size: x-large;*/
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  background: white;
+  border: 1px solid #ccc;
+  min-width: 88px;
+  padding: 5px;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
 
-/*}*/
+.profile-dropdown-wrapper {
+  position: relative;
+  cursor: pointer;
+  vertical-align: middle;
+  line-height: 1;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-box-flex: 0;
+  user-select: none;
+  text-transform: none;
+  color: rgba(0, 0, 0, 0.87);
+  font-weight: 400;
+}
 
-/*.h2 {*/
+.profile-dropdown-wrapper .menu .item {
+  display: block;
+}
 
-/*font-family: 'Quattrocento Sans', sans-serif;*/
-
-/*color: #163657;*/
-
-/*}*/
-
-/*.h2 small {*/
-
-/*color: #163657*/
-
-/*}*/
-
-/*.h3 {*/
-
-/*color: #163657;*/
-
-/*font-family: 'Quattrocento Sans', sans-serif;*/
-
-/*}*/
+.profile-dropdown-wrapper .profile-dropdown-icon {
+  padding-right: 0.8em;
+}
 
 .list-group.panel > .list-group-item {
   border-bottom-right-radius: 4px;
