--- a/src/apps/copo_core/templates/copo/terms_of_use.html
+++ b/src/apps/copo_core/templates/copo/terms_of_use.html
@@ -98,10 +98,10 @@
                     </li>
                     <li> Please see our documentation on the various profile components for
                         <a
-                            href="https://copo-docs.readthedocs.io/en/latest/profile/genomics/genomics-profile-walkthrough.html#genomics-profile-components">
+                            href="https://copo-docs.readthedocs.io/en/latest/profile/genomics/genomics-profile-walkthrough.html#genomics-pcomponents">
                             Genomics profiles
                         </a> and <a
-                            href="https://copo-docs.readthedocs.io/en/latest/profile/tol/tol-profile-walkthrough.html#tree-of-life-profile-components">Tree
+                            href="https://copo-docs.readthedocs.io/en/latest/profile/tol/tol-profile-walkthrough.html#tree-of-life-pcomponents">Tree
                             of Life (ToL) profiles</a> for more information concerning the restrictions and 
                             possibilities of the various research objects.
                     </li>
