--- a/static/copo/css/copo/index.css
+++ b/static/copo/css/copo/index.css
@@ -31,7 +31,7 @@ div.shown span.summary-details-control:before {
   font-size: 13px;
 }
 
-.profile-component-icons {
+.pcomponent-icons {
   color: #000;
   font-size: 12px;
 }
