Use template HTML for component generation
Reverted generic function name to
`generate_component_control()`; Revised components generation logic

--- a/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
+++ b/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
@@ -19,6 +19,14 @@
   grid-template-columns: auto auto;
 }
 
+.pcomponent-icon-class {
+  display: none;
+}
+
+.ui.dropdown .menu > .item .dropdown.icon {
+  color: black;
+}
+
 .pcomponent-name {
   padding-left: 3px;
 }
