fix: Display of the nav icons on small screens; Changed to custom nav toggle button handler from Bootstrap

--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="frontpage-navbar-outer" class="navbar navbar-default navbar-fixed-top navbar-fixed-left {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
+<nav id="frontpage-navbar-outer" class="navbar navbar-default navbar-fixed-left {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand"
