--- a/src/apps/copo_landing_page/templates/nav_public.html
+++ b/src/apps/copo_landing_page/templates/nav_public.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="frontpage-nav" class="navbar navbar-default navbar-fixed-top navbar-fixed-left" role="navigation">
+<nav id="frontpage-nav" class="navbar navbar-default navbar-fixed-left" role="navigation">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand"
