--- a/src/apps/copo_core/templates/copo/nav_authenticated.html
+++ b/src/apps/copo_core/templates/copo/nav_authenticated.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="copo-global-nav" class="navbar navbar-default navbar-fixed-top">
+<nav id="copo-global-nav" class="navbar navbar-default">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% if user.is_authenticated %} {% url 'copo_profile_index:index' %} {% else %}/{% endif %}">
@@ -8,7 +8,7 @@
                      src="{% static 'assets/img/COPO-logo-full-CMYK-black.png' %}"
                      alt="COPO logo">
             </a>
-            <button type='button' class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button class="navbar-toggle" type='button'>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -23,7 +23,7 @@
             </div>
         {% endif %}
 
-        <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
             <li class="dropdown" title="Notifications">
                 <a data-container="body" title="Current Tasks"
                    data-placement="bottom" id="bell_notification"
@@ -31,7 +31,7 @@
                     <span><i class="fa fa-bell" aria-hidden="true"></i></span>
                 </a>
             </li>
-            <li class="dropdown" style="margin-left: 15px;" title="Home">
+            <li class="dropdown" title="Home">
                 <a href="/" target="_parent" aria-label="Home">
                     <span data-copo-tour-id="home_button">
                         <i class="fa fa-home" aria-hidden="true"></i>
@@ -42,7 +42,7 @@
                 <a id="analyticsDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">
                    <i class="fa fa-chart-line" aria-hidden="true"></i>
-                   <span class="caret" style="margin-left: 5px;"></span>
+                   <span class="caret"></span>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="analyticsDropdown">
                         <li>
                             <a href="/copo/tol_dashboard/stats" target="_parent"
@@ -82,18 +82,18 @@
                     </ul>
                 </a>
             </li>
-            <li class="dropdown" style="margin-left: 15px;" title="News">
+            <li class="dropdown" title="News">
                 <a href="/news" target="_parent" aria-label="News">
                     <span data-copo-tour-id="news_button">
                         <i class="fa fa-newspaper" aria-hidden="true"></i>
                     </span>
                 </a>
             </li>
-            <li class="dropdown" style="margin-left: 10px;" title="Help">
+            <li class="dropdown" title="Help">
                 <a id="helpDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">
                    <i class="fa fa-question-circle" aria-hidden="true"></i>
-                   <span class="caret" style="margin-left: 5px;"></span>
+                   <span class="caret"></span>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="helpDropdown">
                         <li class="dropdown" title="View blank manifests or checklists">
                             <a href="/manifests/index" target="_parent"
@@ -124,20 +124,20 @@
                     </ul>
                 </a>
             </li>
-            <li class="dropdown" style="margin-left: 10px;" title="About COPO">
+            <li class="dropdown" title="About COPO">
                 <a href="/about" target="_parent" aria-label="About COPO">
                     <span data-copo-tour-id="about_button">
                         <i class="fa fa-info-circle" style="font-size: 17px;" aria-hidden="true"></i>
                     </span>
                 </a>
             </li>
-            <li class="dropdown" style="margin-right: 10px;" title="Settings">
+            <li class="dropdown" title="Settings">
                 <a id="settingsDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" 
                    role="button" aria-haspopup="true" aria-expanded="false">
                     {% if user.is_authenticated %}
                         <i class="fa fa-gear" aria-hidden="true"></i>
                         <span data-copo-tour-id="global_user_authenticated_button">{{ user }}
-                            <span class="caret" style="margin-left: 5px;"></span>
+                            <span class="caret"></span>
                         </span>
                     {% else %}
                         <i class="fa fa-sign-in-alt copo-header-icons" aria-hidden="true">&nbsp;
