--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="row" style="margin-bottom:70px;">
+    <div class="row global-row">
         <div class="col-sm-5 col-md-5 col-lg-9 copo-page-headers"></div>
         <div class="col-sm-7 col-md-7 col-lg-3 copo-page-icons">
             <button id="accept_reject_shortcut" style="display:none"
